# travyboard

./: .gitignore  README.md
firmware/: .gitignore  CMakeLists.txt  flash-pico.sh  shell.nix
firmware/.cache/clangd/index/: keyboard.h.2571EE3847484EA3.idx  keyboard.h.5FB41EAEFFA71D56.idx  main.cpp.BDF7736DD490C778.idx  main.cpp.C2DEE97E10E8B1B5.idx  tusb_config.h.62A5226735131FF3.idx  tusb_config.h.642AC7AFD6AC79D0.idx  usb_descriptors.c.220F0789D95B7704.idx  usb_descriptors.c.97233527B9C7D4CB.idx  usb_descriptors.h.4F585E28C319F1F2.idx  usb_descriptors.h.6A4596A5BA509A95.idx
firmware/src/: CMakeLists.txt  keyboard.h  main.cpp
firmware/src/keyboard/: keyboard.cpp  keyboard.hpp
firmware/src/keymap/: keymap.cpp  keymap.hpp
firmware/src/layers/: keyboard.h
firmware/src/master/: master.cpp  master.hpp
firmware/src/oled/: oled.cpp  oled.hpp
firmware/src/rotary_encoder/: encoder.cpp  encoder.hpp
firmware/src/slave/: slave.cpp  slave.hpp
firmware/src/tusb/: usb_descriptors.c  usb_descriptors.h
pcb/: #auto_saved_files#  fp-info-cache  fp-lib-table  left.kicad_sch  left.kicad_sch-bak  left_pico.kicad_sch  right.kicad_sch  right_pico.kicad_sch  sym-lib-table  travyboard.kicad_pcb  travyboard.kicad_prl  travyboard.kicad_pro  travyboard.kicad_sch  ~travyboard.kicad_pcb.lck
pcb/models/: pec12r-2120f-s0012.stp
pcb/symbols/: PJ-398A-5A_PJ-399B-6A.kicad_mod
pcb/symbols/RaspberryPi_Pico/Module_RaspberryPi_Pico.pretty/: RaspberryPi_Pico_Common.kicad_mod
pcb/symbols/audio-jacks.pretty/: PJ-399B-6A.kicad_mod
pcb/symbols/encoders.pretty/: PEC12R-2120F-S0012.kicad_mod  PEC12R-4220F-20024.kicad_mod
pcb/symbols/kbd-3-final/kicad-footprints/kbd.pretty/: CherryMX_Hotswap.kicad_mod  PEC12R-2120F-S0012.kicad_mod
pcb/symbols/oled.pretty/: SSD1306-0.91-OLED-4pin-128x32.kicad_mod
pcb/symbols/usbc.pretty/: TYPE-C-31-M-13C.kicad_mod
